--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mariadb://localhost:3306/escrow_test?allowPublicKeyRetrieval=true&useSSL=false
+    url: jdbc:mariadb://localhost:3306/escrow?allowPublicKeyRetrieval=true&useSSL=false
     username: root
     password: 1234
     driver-class-name: org.mariadb.jdbc.Driver
