Refactor: edit application.yaml

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,3 +4,8 @@ spring:
   cloud:
     compatibility-verifier:
       enabled: false
+
+#send balance to market service
+external:
+  balance-service:
+    url: http://localhost:8083
