Refactor: edit BalanceClient

--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -20,3 +20,8 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MariaDBDialect
+
+#send balance to market service
+external:
+  balance-service:
+    url: http://localhost:8083
