Refactor: 알림 테스트 코드 추가

--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -21,7 +21,7 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MariaDBDialect
 
-#send balance to market service
+#send balance to product service
 external:
   balance-service:
     url: http://localhost:8083
