Refactor: 잔액 조회 API unique result return 되게 수정

--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -21,7 +21,7 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MariaDBDialect
 
-#send balance to product service
+#send to product service
 external:
   product-service:
     url: http://localhost:8083
